scripts/log.16947.err
Traceback (most recent call last):
  File "testdata_F_generate.py", line 12, in <module>
    import seaborn
ModuleNotFoundError: No module named 'seaborn'
  File "testdata_B_generate.py", line 35
    motor_name_B = []
    ^
IndentationError: unexpected indent
